# FinanceAnalytics

./: .gitignore  README.md  build.xml  git-macros.xml  pom.xml
projects/OG-Maths/: .classpath  .gitignore  .project  CMakeLists.txt  build.xml  ivy.xml  pom.xml
projects/OG-Maths/config/: OG-Maths.properties
projects/OG-Maths/src/: CMakeLists.txt
projects/OG-Maths/src/com/opengamma/maths/commonapi/exceptions/: MathsExceptionConfigProblem.java  MathsExceptionEncounteredInf.java  MathsExceptionEncounteredNaN.java  MathsExceptionNotImplemented.java  MathsExceptionNotRequested.java
projects/OG-Maths/src/com/opengamma/maths/commonapi/numbers/: ComplexType.java
projects/OG-Maths/src/com/opengamma/maths/commonapi/properties/: DOGMAconfig.java  Str2Bool.java
projects/OG-Maths/src/com/opengamma/maths/highlevelapi/datatypes/derived/: OGArrayTypePairsToFunctionMap.java  OGArrayTypeToFunctionMap.java  (+3 more)
projects/OG-Maths/src/com/opengamma/maths/highlevelapi/functions/: DOGMA.java  OGFunctions.java
projects/OG-Maths/src/com/opengamma/maths/lowlevelapi/exposedapi/: BLAS.java  LAPACK.java  SLATEC.java
projects/OG-Maths/src/main/: CMakeLists.txt
projects/OG-Maths/src/test/: CMakeLists.txt
projects/OG-Maths/tests/performance/com/opengamma/maths/performanceutils/: CacheThrasher.java  CacheThrasherTest.java  DoubleDataPool.java  DoubleDataPoolTest.java  DumpResultsHashMapToFile.java  PerformanceRunner.java  PerformanceRunnerDefaults.java  PerformanceRunnerDefaultsTest.java  ResultsHashMap.java  Timer.java  TimerResultsSet.java  TimerResultsSetTest.java  TimerTest.java
(+3012 files in other folders)
